# memristor-based-STRDP-experiment

./: CMakeLists.txt  STRDP_pcb.dip  sdkconfig
components/adc/: CMakeLists.txt  adc.h  oneshot_read_main.c  read_write_component.c  read_write_component.cpp
components/esp_spi_component/: CMakeLists.txt  esp_spi_component.c  spi.h
components/spi_component/: CMakeLists.txt  spi_component.c
main/: CMakeLists.txt  Kconfig.projbuild  i2c_user.c  i2c_user.h  lcd2004.c  lcd2004.h  main.c  main.h  udp.c  udp.cpp  udp.h  vac_draw.py  wifi.c  wifi.h
