idf_component_register(SRCS "oneshot_read_main.c"
                    INCLUDE_DIRS "."
        "C:/Espressif/frameworks/esp-idf-v5.1.1/components/esp_adc/include"
        "C:/Espressif/frameworks/esp-idf-v5.1.1/components/esp_adc/include/esp_adc"
        "C:/Espressif/frameworks/esp-idf-v5.1.1/components/esp_adc/esp32s3/include")
